--- a/Лабораторна 1. Мова розмітки HTML/index.html
+++ b/Лабораторна 1. Мова розмітки HTML/index.html
@@ -1,13 +1,148 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="uk">
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" type="text/css" href="style.css">
-    <title>Document</title>
+    <title>Пробна сторінка Чирко Валерія</title>
 </head>
 <body>
+    <h1>Ви завітали на пробну сторінку Чирко Валерії</h1>
     
+    <h1>Приклади використання заголовків</h1>
+    <h2>Приклад заголовку 2-го порядку</h2>
+    <h3>Приклад заголовку 3-го порядку</h3>
+    <h4>Приклад заголовку 4-го порядку</h4>
+    <h5>Приклад заголовку 5-го порядку</h5>
+    <h6>Приклад заголовку 6-го порядку</h6>
+
+    <h1>Приклади використання горизонтальних лінійок</h1>
+    <hr class="first_line">
+    <hr class="second_line">
+    <hr class="third_line">
+    <hr class="fourth_line">
+    <hr class="fifth_line">
+    <hr class="sixth_line">
+
+    <h1>Приклади використання розривів стрічок</h1>
+    <p class="poem">
+        Кохайтеся, чорнобриві, <br>
+        Та не з москалями, <br>
+        Бо москалі — чужі люде, <br>
+        Роблять лихо з вами. 
+    </p>
+    <p class="poem">
+        Москаль любить жартуючи, <br>
+        Жартуючи кине; <br>
+        Піде в свою Московщину, <br>
+        А дівчина гине... <br>
+        <strong>Тарас Шевченко</strong>
+    </p>
+
+    <h1>Приклади амперсант-послідовностей</h1>
+    <p> 
+        &rarr;   - для відображення використовується  &amp;rarr;   <br>
+        &apos; &ensp; - для відображення використовується  &amp;apos;   <br>
+        &#9993;  - для відображення використовується  &amp;#9993;  <br>
+        &#10008; - для відображення використовується  &amp;#10008; <br>
+        &lt;     - для відображення використовується  &amp;lt;     <br>
+    </p>
+
+    <h1>Приклади використання форматувань</h1>
+    <ol>
+        <li><b>Напівжирний;</b></li>
+        <li><i>Курсив;</i></li>
+        <li><b><i>Напівжирний курсив.</i></b></li>
+    </ol>
+
+    <h1>Приклади використання списків</h1>
+    
+    <h2>Приклад використання ненумерованих списків</h2>
+    <ul>
+        <li>Перший елемент ненумерованого списку;</li>
+        <li>Другий елемент ненумерованого списку;</li>
+        <li>Третій елемент ненумерованого списку;</li>
+        <li>Четвертий елемент ненумерованого списку;</li>
+    </ul>
+
+    <h2>Приклад використання нумерованого списку</h2>
+    <ol>
+        <li>Перший елемент нумерованого списку</li>
+        <li>Другий елемент нумерованого списку</li>
+        <li>Третій елемент нумерованого списку</li>
+        <li>Четвертий елемент нумерованого списку</li>
+    </ol>
+
+    <h2>Приклад використання списків визначень</h2>
+    <dl>
+        <dt>Означення №1</dt>
+        <dd>тут буде текст означення №1</dd>
+        <dt>Означення №2</dt>
+        <dd>тут буде текст означення №2</dd>
+        <dt>Означення №3</dt>
+        <dd>тут буде текст означення №3</dd>
+    </dl>
+
+    <h2>Приклад вкладених списків</h2>
+    <ol>
+        <li> Овочі:
+            <ol type="a">
+                <li>Огірок;</li>
+                <li>Баклажан;</li>
+                <li>Кабачок.</li>
+            </ol>
+        </li>
+        <li> Фрукти:
+            <ol type="a">
+                <li>Яблуко;</li>
+                <li>Груша;</li>
+                <li>Авокадо.</li>
+            </ol>
+        </li>
+        <li> Ягоди:
+            <ol type="a">
+                <li>Агрус;</li>
+                <li>Малина;</li>
+                <li>Кавун.</li>
+            </ol>
+        </li>
+    </ol>
+
+    <h1>Приклади використання гіперпосилань</h1>
+    <a href="https://www.oa.edu.ua/">Головна сторінка сайту "Острозька академія"</a>
+    <br>
+    <a href="text_file.txt">Гіперпосилання на текстовий файл</a>
+    <br>
+    <a href="#top">Гіперпосилання на початок документу</a>
+    <br>
+    <a href="#bottom">Гіперпосилання на кінець документу</a>
+    <br>
+    <a title="Клацніть тут, щоб написати мені листа" href="mailto:valeriia.chyrko@oa.edu.ua">Гіперпосилання для надсилання листа</a>
+
+    <h1>Приклад використання вставки малюнків</h1>
+    <a href="https://www.oa.edu.ua/" title='Перейти на сайт Національного університету "Острозька академія"'>
+        <img src="logo.jpg" alt="Герб академії">
+    </a>
+
+    <h1>Приклад використання таблиць</h1>
+    <table>
+        <thead>
+            <tr>
+                <th class="teacher-caption">Список викладачів</th>
+                <th class="student-caption">Список студентів</th>
+            </tr>
+        </thead>
+        <tbody>
+            <tr>
+                <td class="first-teacher">Аверкина М.Ф.</td>
+                <td class="first-student">Денищук В.С.</td>
+              </tr>
+              <tr>
+                <td class="second-teacher">Антонюк О.Р.</td>
+                <td class="second-student">Кирилюк О.І</td>
+              </tr>
+        </tbody>
+      </table>
 </body>
 </html>
