--- a/Фінальний проєкт/NotificationsDropdown.html
+++ b/Фінальний проєкт/NotificationsDropdown.html
@@ -16,7 +16,7 @@
                     <span class="material-icons md-light"> notifications_none </span>
                 </button>
             </div>
-            <div class="absolute right-0 mt-2 bg-white rounded-lg shadow-2xl overflow-hidden z-20" style="width:25em;">
+            <div class="absolute right-0 mt-2 bg-white rounded-lg shadow-2xl z-20 overflow-hidden" style="width:25em;">
                 <div>
                     <div class="flow-root px-2 py-3">
                         <div class="float-left">
@@ -50,87 +50,153 @@
                     </div>
 
                     <div>
-                        <li class="flex items-center p-3 border-b hover:bg-purple-200 text-gray-600 text-sm cursor-pointer">
-                            <div class="inline-flex flex-col">
-                                <div class="inline-flex flex-row items-center w-full">
-                                    <div class="flex-none">
-                                        <img class="h-8 w-8 rounded-full object-cover mx-1" src="image.png" alt="image">
-                                    </div>
+                        <li class="flex flex-col p-3 border-b hover:bg-purple-200 text-gray-600 text-sm cursor-pointer">
+                            <div class="inline-flex">
+                                <div class="inline-flex items-center w-full">
+                                    <span class="material-icons px-2">
+                                        account_balance_wallet
+                                    </span>
                                     <div class="flex-auto">
-                                        <span class="font-bold px-2">
-                                            Від кого
-                                        </span>
+                                        <p class="truncate font-bold px-2">
+                                            Борги та переплати
+                                        </p>
                                     </div>
-                                    <div class="flex-none px-2 text-xs">
+                                    <div class="px-2 text-xs">
                                         <span>
-                                            2 хв назад
+                                            30 сек назад
                                         </span>
                                     </div>
-                                </div>
-                                <div class="block pl-12">
-                                    <h6>
-                                        Lorem ipsum dolor sit amet, consectetur adipiscing elit
-                                    </h6>
                                 </div>
                             </div>
-                        </li>
-                        <li class="flex items-center p-3 border-b hover:bg-purple-200 text-gray-600 text-sm cursor-pointer">
-                            <div class="inline-flex flex-col">
-                                <div class="inline-flex flex-row items-center w-full">
-                                    <div class="flex-none">
-                                        <img class="h-8 w-8 rounded-full object-cover mx-1" src="image.png" alt="image">
-                                    </div>
-                                    <div class="flex-auto">
-                                        <span class="font-bold px-2">
-                                            Від кого
-                                        </span>
-                                    </div>
-                                    <div class="flex-none px-2 text-xs">
-                                        <span>
-                                            1 год назад
-                                        </span>
-                                    </div>
-                                </div>
-                                <div class="block pl-12">
-                                    <h6>
-                                        Lorem ipsum dolor sit amet, consectetur adipiscing elit
-                                    </h6>
-                                </div>
+                            <div class="block pr-20 pl-12 w-auto">
+                                <h6>
+                                    За проживання в гуртожитку 
+                                </h6>
+                                <h6 class="text-xs text-gray-600">
+                                    Термін сплати: 08.11.2022
+                                </h6>
                             </div>
                         </li>
-                        <li class="flex items-center p-3 border-b hover:bg-purple-200 text-gray-600 text-sm cursor-pointer">
-                            <div class="inline-flex flex-col">
-                                <div class="inline-flex flex-row items-center w-full">
+                        <li class="flex flex-col p-3 border-b hover:bg-purple-200 text-gray-600 text-sm cursor-pointer">
+                            <div>
+                                <div class="w-full inline-flex items-center">
                                     <div class="flex-none">
-                                        <img class="h-8 w-8 rounded-full object-cover mx-1" src="image.png" alt="image">
-                                    </div>
-                                    <div class="flex-auto">
-                                        <span class="font-bold px-2">
-                                            Від кого
+                                        <span class="material-icons px-2">
+                                            event
                                         </span>
                                     </div>
-                                    <div class="flex-none px-2 text-xs">
+                                    <div class="flex-auto">
+                                        <p class="truncate font-bold px-2">
+                                            Назва події
+                                        </p>
+                                    </div>
+                                    <div class="px-2 text-xs flex-none">
+                                        <span>
+                                            1 хв назад
+                                        </span>
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="block px-12 max-w-24">
+                                <p class="">
+                                    Короткий опис події, створеної користувачем
+                                </p>
+                            </div>
+                        </li>
+                        <li class="flex flex-col p-3 border-b hover:bg-purple-200 text-gray-600 text-sm cursor-pointer">
+                            <div class="inline-flex">
+                                <div class="inline-flex flex-row items-center w-full">
+                                    <span class="material-icons flex-none px-2">
+                                        history_edu
+                                    </span>
+                                    <div class="flex-auto">
+                                        <span class="font-bold pl-2">
+                                            Не здані роботи
+                                        </span>
+                                    </div>
+                                    <div class="flex-none px-2 text-xs justify-end">
                                         <span>
                                             7 дн назад
                                         </span>
                                     </div>
                                 </div>
-                                <div class="block pl-12">
-                                    <h6>
-                                        Lorem ipsum dolor sit amet, consectetur adipiscing elit
-                                    </h6>
-                                </div>
+                            </div>
+                            <div class="block px-12">
+                                <h6>
+                                    Предмет
+                                </h6>
+                                <h6 class="text-xs text-gray-600">
+                                    Опис завдання
+                                </h6>
                             </div>
                         </li>
-                        <li class="flex items-center p-3 border-b hover:bg-purple-200 text-gray-600 text-sm cursor-pointer">
-                            <div class="inline-flex flex-col">
+                        <li class="flex flex-col p-3 border-b hover:bg-purple-200 text-gray-600 text-sm cursor-pointer">
+                            <div class="inline-flex">
                                 <div class="inline-flex flex-row items-center w-full">
                                     <div class="flex-none">
-                                        <img class="h-8 w-8 rounded-full object-cover mx-1" src="image.png" alt="image">
+                                        <span class="material-icons flex-none px-2">
+                                            account_balance
+                                        </span>
                                     </div>
                                     <div class="flex-auto">
                                         <span class="font-bold px-2">
-                                            Від кого
+                                            Бібліотека
+                                        </span>
+                                    </div>
+                                    <div class="flex-none px-2 text-xs">
+                                        <span>
+                                            1 тиж назад
+                                        </span>
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="block px-12">
+                                <h6>
+                                    Назва книги
+                                </h6>
+                                <h6 class="text-xs text-gray-600">
+                                    Термін здачі: 08.11.2022
+                                </h6>
+                            </div>
+                        </li>
+                        <li class="flex flex-col p-3 border-b hover:bg-purple-200 text-gray-600 text-sm cursor-pointer">
+                            <div class="inline-flex">
+                                <div class="inline-flex flex-row items-center w-full">
+                                    <span class="material-icons flex-none px-2">
+                                        history_edu
+                                    </span>
+                                    <div class="flex-auto">
+                                        <span class="font-bold pl-2">
+                                            Не здані роботи
+                                        </span>
+                                    </div>
+                                    <div class="flex-none px-2 text-xs justify-end">
+                                        <span>
+                                            1 міс назад
+                                        </span>
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="block px-12">
+                                <h6>
+                                    Предмет
+                                </h6>
+                                <h6 class="text-xs text-gray-600">
+                                    Опис завдання
+                                </h6>
+                            </div>
+                        </li>
+                        <li class="flex flex-col p-3 border-b hover:bg-purple-200 text-gray-600 text-sm cursor-pointer">
+                            <div class="inline-flex">
+                                <div class="inline-flex flex-row items-center w-full">
+                                    <div class="flex-none">
+                                        <span class="material-icons px-2">
+                                            newspaper
+                                        </span>
+                                    </div>
+                                    <div class="flex-auto">
+                                        <span class="font-bold px-2">
+                                            Назва новини
                                         </span>
                                     </div>
                                     <div class="flex-none px-2 text-xs">
@@ -139,18 +205,65 @@
                                         </span>
                                     </div>
                                 </div>
-                                <div class="block pl-12">
-                                    <h6>
-                                        Lorem ipsum dolor sit amet, consectetur adipiscing elit
-                                    </h6>
-                                </div>
+                            </div>
+                            <div class="block pl-12">
+                                <h6>
+                                    Короткий опис новини
+                                </h6>
                             </div>
                         </li>
-                        
+                        <li class="flex flex-col p-3 border-b hover:bg-purple-200 text-gray-600 text-sm cursor-pointer">
+                            <div class="inline-flex">
+                                <div class="inline-flex flex-row items-center w-full">
+                                    <span class="material-icons flex-none px-2">
+                                        history_edu
+                                    </span>
+                                    <div class="flex-auto">
+                                        <span class="font-bold pl-2">
+                                            Не здані роботи
+                                        </span>
+                                    </div>
+                                    <div class="flex-none px-2 text-xs justify-end">
+                                        <span>
+                                            2 роки назад
+                                        </span>
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="block px-12">
+                                <h6>
+                                    Предмет
+                                </h6>
+                                <h6 class="text-xs text-gray-600">
+                                    Опис завдання
+                                </h6>
+                            </div>
+                        </li>
+                        <li class="flex flex-col p-3 border-b hover:bg-purple-200 text-gray-600 text-sm cursor-pointer">
+                            <div class="inline-flex">
+                                <div class="inline-flex flex-row items-center w-full">
+                                    <span class="material-icons flex-none px-2">
+                                        insert_drive_file
+                                    </span>
+                                    <div class="flex-auto">
+                                        <span class="font-bold pl-2">
+                                            Тип заяви
+                                        </span>
+                                    </div>
+                                    <div class="flex-none px-2 text-xs justify-end">
+                                        <span>
+                                            3 роки назад
+                                        </span>
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="block px-12">
+                                <h6>
+                                    Статус
+                                </h6>
+                            </div>
+                        </li>
                     </div>
-                </div>
-                <div>
-                    
                 </div>
                 <a href="#" class="block text-indigo-500 hover:bg-gradient-to-r from-purple-500 to-indigo-500 hover:text-white text-center font-bold py-4">Показати всі</a>
             </div>
