--- a/Фінальний проєкт/MainContentNotification.html
+++ b/Фінальний проєкт/MainContentNotification.html
@@ -55,112 +55,223 @@
             <li class="flex-none">
                 <div class="flex items-center pl-3">
                     <input id="angular-checkbox-list" type="checkbox" value="" class="w-4 h-4 text-indigo-500 rounded border-gray-300 cursor-pointer">
-                    <label for="angular-checkbox-list" class="py-3 ml-2 text-sm font-medium text-gray-700">Прочитані</label>
-                </div>
-            </li>
-            <li class="flex-none">
-                <div class="flex items-center pl-3">
-                    <input id="laravel-checkbox-list" type="checkbox" value="" class="w-4 h-4 text-indigo-500 rounded border-gray-300 cursor-pointer">
-                    <label for="laravel-checkbox-list" class="py-3 ml-2 text-sm font-medium text-gray-700">Всі</label>
+                    <label for="angular-checkbox-list" class="py-3 ml-2 text-sm font-medium text-gray-700">Обрані</label>
                 </div>
             </li>
           </ul>
-        <div class="overflow-x-auto relative sm:rounded-lg">
+        <div class="overflow-x-auto relative px-4 sm:rounded-lg">
           <table class="w-full text-sm text-left text-gray-500">
             <thead class="text-md text-gray-700">
               <tr class="truncate">
-                  <th scope="col" class="py-3 px-6">
-                    <div class="items-center">
-                      <input id="laravel-checkbox-list" type="checkbox" value="" class="w-4 h-4 p-1 text-indigo-500 rounded border-gray-300 cursor-pointer">
-                      <button id="dropdownInformationButton" class="py-3 ml-2 text-gray-700 flex-auto hover:text-gray-900 font-medium rounded-lg text-base text-center inline-flex items-center" type="button"> Повідомлення <div class="pt-2 px-2 float-right"></div></button>
-                  </div>
-                    
+                  <th class="p-4 w-6">
+                    <input type="checkbox" value="" class="w-4 h-4 p-1 text-indigo-500 rounded border-gray-300 cursor-pointer">
                   </th>
-                  <th scope="col" class="py-3 px-6">
+                  <th scope="col" class="py-3 px-2">
+                    <button id="dropdownInformationButton" class="py-3 ml-2 text-gray-700 flex-auto hover:text-gray-900 font-medium rounded-lg text-base text-center inline-flex items-center" type="button"> Сповіщення <div class="pt-2 px-2 float-right"></div></button>
+                  </th>
+                  <th scope="col" class="py-3 px-2">
                     <button id="dropdownInformationButton" class="text-gray-700 flex-auto hover:text-gray-900 font-medium rounded-lg text-base text-center inline-flex items-center" type="button"> Відправник <div class="pt-2 px-2 float-right"><span class="material-icons md-light"> expand_more </span></div></button>
                   </th>
-                  <th scope="col" class="py-3 px-6">
+                  <th scope="col" class="py-3 px-2">
                     <button id="dropdownInformationButton" class="text-gray-700 flex-auto hover:text-gray-900 font-medium rounded-lg text-base text-center inline-flex items-center" type="button"> Дата <div class="pt-2 px-2 float-right"><span class="material-icons md-light"> expand_more </span></div></button>
                   </th>
               </tr>
           </thead>
               <tbody>
-                  <tr class="bg-white border-b hover:bg-purple-200">
-                      <th scope="row" class="py-4 px-6 font-medium text-gray-900 whitespace-nowrap">
+                  <tr class="bg-white border-b bg-indigo-100 hover:bg-purple-200">
+                      <th class="p-4 w-6">
+                        <input type="checkbox" value="" class="w-4 h-4 p-3 text-indigo-500 rounded border-gray-300 cursor-pointer">
+                      </th>
+                      <th scope="row" class="py-3 px-2 font-medium text-gray-900 whitespace-nowrap">
                         <div>
-                          <input id="angular-checkbox-list" type="checkbox" value="" class="w-4 h-4 text-indigo-500 rounded border-gray-300 cursor-pointer">
-                          <label for="angular-checkbox-list" class="py-3 ml-2">Тема листа</label>
+                          <div class="py-3 px-2">Термін виконання завдання: <span class="italic"> Семінар 9-10. "Проживання та харчування" </span> спливає</div>
+                          <button class="text-indigo-500 text-xs mx-2 underline hover:text-black">Перейти до завдання</button>
                         </div>
                       </th>
-                      <td class="py-4 px-6">
-                          Прізвище ім'я
-                    </td>
-                      <td class="py-4 px-6">
+                      <td class="py-3 px-2">
+                          Адміністратор
+                      </td>
+                      <td class="py-3 px-2">
                           06.11.2022
                       </td>
-                      <td class="py-4 px-6 text-right">
+                      <td class="py-3 px-2 text-right">
                         <button type="delete">
                           <span class="material-icons md-light"> delete </span>
                       </button>
                       </td>
                   </tr>
-                  <tr class="bg-white border-b hover:bg-purple-200">
-                    <th scope="row" class="py-4 px-6 font-medium text-gray-900 whitespace-nowrap dark:text-white">
-                      <div>
-                        <input id="angular-checkbox-list" type="checkbox" value="" class="w-4 h-4 text-indigo-500 rounded border-gray-300 cursor-pointer">
-                        <label for="angular-checkbox-list" class="py-3 ml-2">Тема листа</label>
-                      </div>
+                  <tr class="bg-white border-b bg-indigo-100 hover:bg-purple-200">
+                    <th class="p-4 w-6">
+                      <input type="checkbox" value="" class="w-4 h-4 p-3 text-indigo-500 rounded border-gray-300 cursor-pointer">
                     </th>
-                    <td class="py-4 px-6">
-                        Прізвище ім'я
-                  </td>
-                    <td class="py-4 px-6">
-                        06.11.2022
+                    <th scope="row" class="py-3 px-2 font-medium text-gray-900 whitespace-nowrap">
+                      <div class="py-3 px-2">Ви здали роботу <span class="italic"> Семінар 7. "Проживання та харчування" </span></div>
+                    </th>
+                    <td class="py-3 px-2">
+                        Адміністратор
                     </td>
-                    <td class="py-4 px-6 text-right">
+                    <td class="py-3 px-2">
+                        05.11.2022
+                    </td>
+                    <td class="py-3 px-2 text-right">
                       <button type="delete">
                         <span class="material-icons md-light"> delete </span>
                     </button>
                     </td>
                 </tr>
                 <tr class="bg-white border-b hover:bg-purple-200">
-                  <th scope="row" class="py-4 px-6 font-medium text-gray-900 whitespace-nowrap dark:text-white">
+                  <th class="p-4 w-6">
+                    <input type="checkbox" value="" class="w-4 h-4 p-3 text-indigo-500 rounded border-gray-300 cursor-pointer">
+                  </th>
+                  <th scope="row" class="py-3 px-2 font-medium text-gray-900 whitespace-nowrap">
                     <div>
-                      <input id="angular-checkbox-list" type="checkbox" value="" class="w-4 h-4 text-indigo-500 rounded border-gray-300 cursor-pointer">
-                      <label for="angular-checkbox-list" class="py-3 ml-2">Тема листа</label>
+                      <div class="py-3 px-2">Моніторинг освітнього середовища Національного університету "Острозька академія" 2022</div>
+                      <button class="text-indigo-500 text-xs mx-2 underline hover:text-black">Прочитати новину повністю</button>
                     </div>
                   </th>
-                  <td class="py-4 px-6">
-                      Прізвище ім'я
-                </td>
-                  <td class="py-4 px-6">
-                      06.11.2022
+                  <td class="py-3 px-2">
+                      Катерина Сергіївна Озімковська
                   </td>
-                  <td class="py-4 px-6 text-right">
+                  <td class="py-3 px-2">
+                      04.11.2022
+                  </td>
+                  <td class="py-3 px-2 text-right">
+                    <button type="delete">
+                      <span class="material-icons md-light"> delete </span>
+                  </button>
+                  </td>
+                </tr>
+                <tr class="bg-white border-b hover:bg-purple-200">
+                  <th class="p-4 w-6">
+                    <input type="checkbox" value="" class="w-4 h-4 p-3 text-indigo-500 rounded border-gray-300 cursor-pointer">
+                  </th>
+                  <th scope="row" class="py-3 px-2 font-medium text-gray-900 whitespace-nowrap">
+                    <div>
+                      <div class="py-3 px-2">Стретович Дмитро Андрійович оцінив результати вашої роботи <span class="italic">Лабораторна 2. CSS</span></div>
+                      <button class="text-indigo-500 text-xs mx-2 underline hover:text-black">Дізнатися деталі</button>
+                    </div>
+                  </th>
+                  <td class="py-3 px-2">
+                      Стретович Дмитро Андрійович
+                  </td>
+                  <td class="py-3 px-2">
+                      03.11.2022
+                  </td>
+                  <td class="py-3 px-2 text-right">
+                    <button type="delete">
+                      <span class="material-icons md-light"> delete </span>
+                  </button>
+                  </td>
+                </tr>
+                <tr class="bg-white border-b hover:bg-purple-200">
+                  <th class="p-4 w-6">
+                    <input type="checkbox" value="" class="w-4 h-4 p-3 text-indigo-500 rounded border-gray-300 cursor-pointer">
+                  </th>
+                  <th scope="row" class="py-3 px-2 font-medium text-gray-900 whitespace-nowrap">
+                    <div>
+                      <div class="py-3 px-2">Борги та переплати: <span class="italic">заборгованість за навчання</span></div>
+                      <button class="text-indigo-500 text-xs mx-2 underline hover:text-black">Детальна інформація</button>
+                    </div>
+                  </th>
+                  <td class="py-3 px-2">
+                      Любов Миколаївна Музичук
+                  </td>
+                  <td class="py-3 px-2">
+                      03.11.2022
+                  </td>
+                  <td class="py-3 px-2 text-right">
+                    <button type="delete">
+                      <span class="material-icons md-light"> delete </span>
+                  </button>
+                  </td>
+                </tr>
+                <tr class="bg-white border-b hover:bg-purple-200">
+                  <th class="p-4 w-6">
+                    <input type="checkbox" value="" class="w-4 h-4 p-3 text-indigo-500 rounded border-gray-300 cursor-pointer">
+                  </th>
+                  <th scope="row" class="py-3 px-2 font-medium text-gray-900 whitespace-nowrap">
+                    <div>
+                      <div class="py-3 px-2">Борги та переплати: <span class="italic">переплата за Проживання в гуртожитку</span></div>
+                      <button class="text-indigo-500 text-xs mx-2 underline hover:text-black">Детальна інформація</button>
+                    </div>
+                  </th>
+                  <td class="py-3 px-2">
+                      Любов Миколаївна Музичук
+                  </td>
+                  <td class="py-3 px-2">
+                      03.11.2022
+                  </td>
+                  <td class="py-3 px-2 text-right">
+                    <button type="delete">
+                      <span class="material-icons md-light"> delete </span>
+                  </button>
+                  </td>
+                </tr>
+                <tr class="bg-white border-b bg-indigo-100 hover:bg-purple-200">
+                  <th class="p-4 w-6">
+                    <input type="checkbox" value="" class="w-4 h-4 p-3 text-indigo-500 rounded border-gray-300 cursor-pointer">
+                  </th>
+                  <th scope="row" class="py-3 px-2 font-medium text-gray-900 whitespace-nowrap">
+                    <div>
+                      <div class="py-3 px-2">Сплачено 2000 грн. <span class="italic">за прання</span></div>
+                    </div>
+                  </th>
+                  <td class="py-3 px-2">
+                      Любов Миколаївна Музичук
+                  </td>
+                  <td class="py-3 px-2">
+                      03.11.2022
+                  </td>
+                  <td class="py-3 px-2 text-right">
+                    <button type="delete">
+                      <span class="material-icons md-light"> delete </span>
+                  </button>
+                  </td>
+                </tr>
+                <tr class="bg-white border-b bg-indigo-100 hover:bg-purple-200">
+                  <th class="p-4 w-6">
+                    <input type="checkbox" value="" class="w-4 h-4 p-3 text-indigo-500 rounded border-gray-300 cursor-pointer">
+                  </th>
+                  <th scope="row" class="py-3 px-2 font-medium text-gray-900 whitespace-nowrap">
+                    <div>
+                      <div class="py-3 px-2">Термін здачі книги: <span class="italic"> "Філософія буття: книга 1" </span> спливає</div>
+                      <button class="text-indigo-500 text-xs mx-2 underline hover:text-black">Дізнатися деталі</button>
+                    </div>
+                  </th>
+                  <td class="py-3 px-2">
+                      Адміністратор
+                  </td>
+                  <td class="py-3 px-2">
+                      26.10.2022
+                  </td>
+                  <td class="py-3 px-2 text-right">
                     <button type="delete">
                       <span class="material-icons md-light"> delete </span>
                   </button>
                   </td>
               </tr>
               <tr class="bg-white border-b hover:bg-purple-200">
-                <th scope="row" class="py-4 px-6 font-medium text-gray-900 whitespace-nowrap dark:text-white">
+                <th class="p-4 w-6">
+                  <input type="checkbox" value="" class="w-4 h-4 p-3 text-indigo-500 rounded border-gray-300 cursor-pointer">
+                </th>
+                <th scope="row" class="py-3 px-2 font-medium text-gray-900 whitespace-nowrap">
                   <div>
-                    <input id="angular-checkbox-list" type="checkbox" value="" class="w-4 h-4 text-indigo-500 rounded border-gray-300 cursor-pointer">
-                    <label for="angular-checkbox-list" class="py-3 ml-2">Тема листа</label>
+                    <div class="py-3 px-2">Статус заяви: <span class="italic"> Довідка про навчання </span> змінено</div>
+                    <button class="text-indigo-500 text-xs mx-2 underline hover:text-black">Дізнатися деталі</button>
                   </div>
                 </th>
-                <td class="py-4 px-6">
-                    Прізвище ім'я
-              </td>
-                <td class="py-4 px-6">
-                    06.11.2022
+                <td class="py-3 px-2">
+                    Адміністратор
                 </td>
-                <td class="py-4 px-6 text-right">
+                <td class="py-3 px-2">
+                    25.10.2022
+                </td>
+                <td class="py-3 px-2 text-right">
                   <button type="delete">
                     <span class="material-icons md-light"> delete </span>
                 </button>
                 </td>
-              </tr>
+            </tr>
               </tbody>
           </table>
         </div>
