--- a/Фінальний проєкт/NotificationsDropdown.html
+++ b/Фінальний проєкт/NotificationsDropdown.html
@@ -13,7 +13,7 @@
         <div class="relative my-8">
             <div>
                 <button class="relative z-10 block rounded-md bg-purple-200 p-2 cursor-pointer hover:bg-purple-500" >
-                    <span class="material-icons md-light"> notifications_none </span>
+                    <span class="material-icons md-light"> notifications_active </span>
                 </button>
             </div>
             <div class="absolute right-0 mt-2 bg-white rounded-lg shadow-2xl z-20 overflow-hidden" style="width:25em;">
