Add border to select object

--- a/Фінальний проєкт/NotificationsDropdown.html
+++ b/Фінальний проєкт/NotificationsDropdown.html
@@ -41,7 +41,7 @@
                     <div>
                         <div>
                             <div class="m-3">
-                                <select id="notification_type" class="block py-3 px-1 mr-4 w-full text-sm text-gray-700 font-semibold bg-transparent border-0 border-b-2 border-indigo-500 cursor-pointer focus:outline-none focus:ring-0 focus:border-gray-200 peer">
+                                <select id="notification_type" class="block py-3 px-1 mr-4 w-full text-sm text-gray-700 font-semibold bg-transparent border-0 border-2 border-indigo-500 rounded cursor-pointer focus:outline-none focus:ring-0 focus:border-gray-200 peer">
 -                                   <option selected>Всі</option>
                                     <option value="finance">Борги та переплати</option>
                                     <option value="assignments">Не здані роботи</option>
