--- a/Фінальний проєкт/MainContentNotification.html
+++ b/Фінальний проєкт/MainContentNotification.html
@@ -67,7 +67,7 @@
                     <input type="checkbox" value="" class="w-4 h-4 p-1 text-indigo-500 rounded border-gray-300 cursor-pointer">
                   </th>
                   <th scope="col" class="py-3 px-2">
-                    <button id="dropdownInformationButton" class="py-3 ml-2 text-gray-700 flex-auto hover:text-gray-900 font-medium rounded-lg text-base text-center inline-flex items-center" type="button"> Сповіщення <div class="pt-2 px-2 float-right"></div></button>
+                    <button id="dropdownInformationButton" class="py-3 ml-2 text-gray-700 flex-auto font-medium rounded-lg text-base text-center inline-flex items-center" type="button"> Сповіщення</button>
                   </th>
                   <th scope="col" class="py-3 px-2">
                     <button id="dropdownInformationButton" class="text-gray-700 flex-auto hover:text-gray-900 font-medium rounded-lg text-base text-center inline-flex items-center" type="button"> Відправник <div class="pt-2 px-2 float-right"><span class="material-icons md-light"> expand_more </span></div></button>
@@ -83,9 +83,23 @@
                         <input type="checkbox" value="" class="w-4 h-4 p-3 text-indigo-500 rounded border-gray-300 cursor-pointer">
                       </th>
                       <th scope="row" class="py-3 px-2 font-medium text-gray-900 whitespace-nowrap">
-                        <div>
-                          <div class="py-3 px-2">Термін виконання завдання: <span class="italic"> Семінар 9-10. "Проживання та харчування" </span> спливає</div>
-                          <button class="text-indigo-500 text-xs mx-2 underline hover:text-black">Перейти до завдання</button>
+                        <div class="inline-flex flex-col">
+                          <div class="items-center">
+                            <div class="inline-flex">
+                              <div class="inline-flex flex-row items-center">
+                                  <span class="material-icons flex-none px-2">
+                                      history_edu
+                                  </span>
+                              </div>
+                              <div class="text-base">
+                                Програмування C# (2 курс, 1 семестр)
+                              </div>
+                          </div>
+                          <div class="block px-2">
+                            <div>
+                              <div class="px-2 text-sm text-gray-700">Термін виконання завдання: <span class="italic"> Робота з масивами у С# </span> спливає</div>
+                              <button class="text-indigo-500 text-xs mx-2 underline hover:text-black">Перейти до завдання</button>
+                            </div>                        
                         </div>
                       </th>
                       <td class="py-3 px-2">
@@ -105,7 +119,22 @@
                       <input type="checkbox" value="" class="w-4 h-4 p-3 text-indigo-500 rounded border-gray-300 cursor-pointer">
                     </th>
                     <th scope="row" class="py-3 px-2 font-medium text-gray-900 whitespace-nowrap">
-                      <div class="py-3 px-2">Ви здали роботу <span class="italic"> Семінар 7. "Проживання та харчування" </span></div>
+                        <div class="inline-flex flex-col">
+                          <div class="items-center">
+                            <div class="inline-flex">
+                              <div class="inline-flex flex-row items-center">
+                                  <span class="material-icons flex-none px-2">
+                                      history_edu
+                                  </span>
+                              </div>
+                              <div class="text-base">
+                                Організація баз даних та знань
+                              </div>
+                          </div>
+                          <div class="block px-2">
+                              <div class="px-2 text-sm text-gray-700">Ви здали роботу <span class="italic"> Лаб-10 Співвіднесені підзапити </span></div>
+                            </div>                        
+                        </div>
                     </th>
                     <td class="py-3 px-2">
                         Адміністратор
@@ -124,9 +153,23 @@
                     <input type="checkbox" value="" class="w-4 h-4 p-3 text-indigo-500 rounded border-gray-300 cursor-pointer">
                   </th>
                   <th scope="row" class="py-3 px-2 font-medium text-gray-900 whitespace-nowrap">
-                    <div>
-                      <div class="py-3 px-2">Моніторинг освітнього середовища Національного університету "Острозька академія" 2022</div>
-                      <button class="text-indigo-500 text-xs mx-2 underline hover:text-black">Прочитати новину повністю</button>
+                    <div class="inline-flex flex-col">
+                      <div class="items-center">
+                        <div class="inline-flex">
+                          <div class="inline-flex flex-row items-center">
+                              <span class="material-icons flex-none px-2">
+                                newspaper
+                              </span>
+                          </div>
+                          <div class="text-base">
+                            Моніторинг освітнього середовища Національного університету "Острозька академія"
+                          </div>
+                      </div>
+                      <div class="block px-2">
+                        <div>
+                          <div class="px-2 text-sm text-gray-700 text-ellipsis">Шановні колеги, студенти, аспіранти, Слава Україні!</div>
+                          <button class="text-indigo-500 text-xs mx-2 underline hover:text-black">Прочитати новину повністю</button>
+                        </div>                        
                     </div>
                   </th>
                   <td class="py-3 px-2">
@@ -146,9 +189,23 @@
                     <input type="checkbox" value="" class="w-4 h-4 p-3 text-indigo-500 rounded border-gray-300 cursor-pointer">
                   </th>
                   <th scope="row" class="py-3 px-2 font-medium text-gray-900 whitespace-nowrap">
-                    <div>
-                      <div class="py-3 px-2">Стретович Дмитро Андрійович оцінив результати вашої роботи <span class="italic">Лабораторна 2. CSS</span></div>
-                      <button class="text-indigo-500 text-xs mx-2 underline hover:text-black">Дізнатися деталі</button>
+                    <div class="inline-flex flex-col">
+                      <div class="items-center">
+                        <div class="inline-flex">
+                          <div class="inline-flex flex-row items-center">
+                              <span class="material-icons flex-none px-2">
+                                fact_check
+                              </span>
+                          </div>
+                          <div class="text-base">
+                            Web-розробка клієнтської та серверної частини
+                          </div>
+                      </div>
+                      <div class="block px-2">
+                        <div>
+                          <div class="px-2 text-sm text-gray-700 text-ellipsis">Стретович Дмитро Андрійович оцінив результати вашої роботи <span class="italic">Лабораторна 2. CSS</span></div>
+                          <button class="text-indigo-500 text-xs mx-2 underline hover:text-black">Дізнатися деталі</button>
+                        </div>                        
                     </div>
                   </th>
                   <td class="py-3 px-2">
@@ -168,9 +225,23 @@
                     <input type="checkbox" value="" class="w-4 h-4 p-3 text-indigo-500 rounded border-gray-300 cursor-pointer">
                   </th>
                   <th scope="row" class="py-3 px-2 font-medium text-gray-900 whitespace-nowrap">
-                    <div>
-                      <div class="py-3 px-2">Борги та переплати: <span class="italic">заборгованість за навчання</span></div>
-                      <button class="text-indigo-500 text-xs mx-2 underline hover:text-black">Детальна інформація</button>
+                    <div class="inline-flex flex-col">
+                      <div class="items-center">
+                        <div class="inline-flex">
+                          <div class="inline-flex flex-row items-center">
+                              <span class="material-icons flex-none px-2">
+                                account_balance_wallet
+                              </span>
+                          </div>
+                          <div class="text-base">
+                            Борги та переплати: <span class="italic">заборгованість за навчання</span>
+                          </div>
+                      </div>
+                      <div class="block px-2">
+                        <div>
+                          <div class="px-2 text-sm text-gray-700 text-ellipsis">Термін сплати: <span class="italic">26.11.2022</span></div>
+                          <button class="text-indigo-500 text-xs mx-2 underline hover:text-black">Детальна інформація</button>
+                        </div>                        
                     </div>
                   </th>
                   <td class="py-3 px-2">
@@ -190,9 +261,23 @@
                     <input type="checkbox" value="" class="w-4 h-4 p-3 text-indigo-500 rounded border-gray-300 cursor-pointer">
                   </th>
                   <th scope="row" class="py-3 px-2 font-medium text-gray-900 whitespace-nowrap">
-                    <div>
-                      <div class="py-3 px-2">Борги та переплати: <span class="italic">переплата за Проживання в гуртожитку</span></div>
-                      <button class="text-indigo-500 text-xs mx-2 underline hover:text-black">Детальна інформація</button>
+                    <div class="inline-flex flex-col">
+                      <div class="items-center">
+                        <div class="inline-flex">
+                          <div class="inline-flex flex-row items-center">
+                              <span class="material-icons flex-none px-2">
+                                account_balance_wallet
+                              </span>
+                          </div>
+                          <div class="text-base">
+                            Борги та переплати: <span class="italic">переплата за проживання в гуртожитку</span>
+                          </div>
+                      </div>
+                      <div class="block px-2">
+                        <div>
+                          <div class="px-2 text-sm text-gray-700 text-ellipsis">Дата платежу: <span class="italic">26.11.2022</span></div>
+                          <button class="text-indigo-500 text-xs mx-2 underline hover:text-black">Детальна інформація</button>
+                        </div>                        
                     </div>
                   </th>
                   <td class="py-3 px-2">
@@ -212,8 +297,22 @@
                     <input type="checkbox" value="" class="w-4 h-4 p-3 text-indigo-500 rounded border-gray-300 cursor-pointer">
                   </th>
                   <th scope="row" class="py-3 px-2 font-medium text-gray-900 whitespace-nowrap">
-                    <div>
-                      <div class="py-3 px-2">Сплачено 2000 грн. <span class="italic">за прання</span></div>
+                    <div class="inline-flex flex-col">
+                      <div class="items-center">
+                        <div class="inline-flex">
+                          <div class="inline-flex flex-row items-center">
+                              <span class="material-icons flex-none px-2">
+                                credit_card
+                              </span>
+                          </div>
+                          <div class="text-base">
+                            Платіж
+                          </div>
+                      </div>
+                      <div class="block px-2">
+                        <div>
+                          <div class="px-2 text-sm text-gray-700 text-ellipsis">Сплачено 2000 грн. <span class="italic">за прання</span></div>
+                        </div>                        
                     </div>
                   </th>
                   <td class="py-3 px-2">
@@ -233,9 +332,23 @@
                     <input type="checkbox" value="" class="w-4 h-4 p-3 text-indigo-500 rounded border-gray-300 cursor-pointer">
                   </th>
                   <th scope="row" class="py-3 px-2 font-medium text-gray-900 whitespace-nowrap">
-                    <div>
-                      <div class="py-3 px-2">Термін здачі книги: <span class="italic"> "Філософія буття: книга 1" </span> спливає</div>
-                      <button class="text-indigo-500 text-xs mx-2 underline hover:text-black">Дізнатися деталі</button>
+                    <div class="inline-flex flex-col">
+                      <div class="items-center">
+                        <div class="inline-flex">
+                          <div class="inline-flex flex-row items-center">
+                              <span class="material-icons flex-none px-2">
+                                account_balance
+                              </span>
+                          </div>
+                          <div class="text-base">
+                            Бібліотека
+                          </div>
+                      </div>
+                      <div class="block px-2">
+                        <div>
+                          <div class="px-2 text-sm text-gray-700 text-ellipsis">Термін здачі книги: <span class="italic"> "Філософія буття: книга 1" </span> спливає</div>
+                          <button class="text-indigo-500 text-xs mx-2 underline hover:text-black">Дізнатися деталі</button>
+                        </div>                        
                     </div>
                   </th>
                   <td class="py-3 px-2">
@@ -255,9 +368,23 @@
                   <input type="checkbox" value="" class="w-4 h-4 p-3 text-indigo-500 rounded border-gray-300 cursor-pointer">
                 </th>
                 <th scope="row" class="py-3 px-2 font-medium text-gray-900 whitespace-nowrap">
-                  <div>
-                    <div class="py-3 px-2">Статус заяви: <span class="italic"> Довідка про навчання </span> змінено</div>
-                    <button class="text-indigo-500 text-xs mx-2 underline hover:text-black">Дізнатися деталі</button>
+                  <div class="inline-flex flex-col">
+                    <div class="items-center">
+                      <div class="inline-flex">
+                        <div class="inline-flex flex-row items-center">
+                            <span class="material-icons flex-none px-2">
+                              insert_drive_file
+                            </span>
+                        </div>
+                        <div class="text-base">
+                          Довідка про навчання
+                        </div>
+                    </div>
+                    <div class="block px-2">
+                      <div>
+                        <div class="px-2 text-sm text-gray-700 text-ellipsis">Статус заяви: <span class="italic"> Довідка про навчання </span> змінено</div>
+                        <button class="text-indigo-500 text-xs mx-2 underline hover:text-black">Дізнатися деталі</button>
+                      </div>                        
                   </div>
                 </th>
                 <td class="py-3 px-2">
